ast: support "named" attachpoints/probes
This allows users to provide custom names for specific
attachpoints/probes. This will be useful for two major features:

1) Parallelizing all the tests. This is currently blocked by the
   encoding of the filenames into the uprobes. This feature will
   trivially work around that issue.

2) Moving watchpoint setup into the standard library. Currently
   this is all bespoke. We will enable a general "attach" function
   to attach probes to other (compatible) attachpoints, but need
   a way to unique identify probes. This provides that.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4752, branch: user/amscanne/named_probes/1

--- a/man/adoc/bpftrace.adoc
+++ b/man/adoc/bpftrace.adoc
@@ -215,6 +215,7 @@ Syntax, types, and concepts for bpftrace are link:https://github.com/bpftrace/bp
 bpftrace supports various probe types which allow the user to attach BPF programs to different types of events.
 Each probe starts with a provider (e.g. `kprobe`) followed by a colon (`:`) separated list of options.
 The amount of options and their meaning depend on the provider.
+Optionally, the attachpoint specified can be prefixed by a user-provided name followed by equal sign (e.g. `myname=kprobe:...`); this is used for certain advanced features and is typically omitted.
 link:https://github.com/bpftrace/bpftrace/blob/master/docs/language.md#probes[Full list of probe types].
 
 == Standard library
