feature: drop asyncwatchpoint and watchpoint:func+arg1
This feature has been advertised as experimental in the documentation
since it was introduced. It does not appear in any scripts that I can
easily find outside the actual repository.

While powerful, unfortunately this feature requires an enormous amount
of internal plumbing and complexity in codegen in other places to
support it, and it is somewhat broken. It relies exclusively on untyped
arguments (using the standard register convention), and can't support
modern probe types or USDTs. The best path forward is to remove this,
and support a standardized asynchronous attach and detach of *any* probe
type in a general way. Doing so allows us to move towards the standard
library faster, and delete a lot of supporting code.

Signed-off-by: Adin Scannell <amscanne@meta.com>

stack-info: PR: https://github.com/bpftrace/bpftrace/pull/4890, branch: user/amscanne/funcidx/1

--- a/man/adoc/bpftrace.adoc
+++ b/man/adoc/bpftrace.adoc
@@ -162,7 +162,7 @@ Errors are still written to stderr.
 
 Attach to the process with or filter actions by _PID_.
 If the process terminates, bpftrace will also terminate.
-When using USDT, uprobes, uretprobes, hardware, software, profile, interval, watchpoint, or asyncwatchpoint probes they will be attached to only this process.
+When using USDT, uprobes, uretprobes, hardware, software, profile, interval, or watchpoint probes they will be attached to only this process.
 For all other probes, except begin/end, the pid will act like a predicate to filter out events not from that pid.
 For listing uprobes/uretprobes set the target to '*' and the process's address space will be searched for the symbols.
 
