Add --traceable-functions CLI flag
We read `available_filter_functions` on startup to determine which functions are
traceable and which modules to load BTF data for. However, reading this file can
be slow: for each traceable function the kernel calls `kallsyms_lookup()`, which
for modules involves a linear search over the symtab [1]. This primarily affects
systems with large modules.

  # time bpftrace -e 'kprobe:schedule{ @ = count() } BEGIN { exit() }'
  Attached 2 probes
      0m06.43s real     0m01.31s user     0m04.24s system

Furthermore, this tracefs file depends on `CONFIG_DYNAMIC_FTRACE`, which may not
be enabled on all systems. For example, Android common kernels support kprobes,
but don't enable function_tracer at all.

This patch adds a new command line argument that can be used to provide the list
of traceable functions. Since this list isn't expected to change often, the user
can copy `available_filter_functions` to a file and use the flag to improve
bpftrace's startup time. It's also useful if some functions aren't supported by
ftrace, but the kernel allows them to be probed.

[1] https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/tree/kernel/module/kallsyms.c?h=v6.12.73#n280

Signed-off-by: Tomislav Novak <tnovak@meta.com>

--- a/man/adoc/bpftrace.adoc
+++ b/man/adoc/bpftrace.adoc
@@ -159,6 +159,13 @@ Probes that do not match are not loaded into the kernel.
 Special probes (`BEGIN` and `END`) are not affected by this filter.
 If no probes match, bpftrace exits with an error.
 
+=== *--traceable-functions* _FILENAME_
+
+Specify the file containing the list of traceable kernel functions. If not set,
+bpftrace uses `/sys/kernel/tracing/available_filter_functions`, which depends on
+dynamic ftrace. The format is the same as in `available_filter_functions`: each
+line is either "symbol" or "symbol [module]".
+
 === *-o* _FILENAME_
 
 Write bpftrace tracing output to _FILENAME_ instead of stdout.
