Skip is-traceable checks for kprobes in unsafe mode
If the target function cannot be found in `available_filter_functions` (which
depends on dynamic ftrace), the probe is rejected early. This allows us to
emit useful warnings and avoid compiling BPF programs/loading BTF data for
invalid probes.

However, this also assumes that kprobes can only be installed in functions
supported by ftrace, which isn't the case in general. For example, the kernel
may be compiled with `CONFIG_KPROBE_EVENTS_ON_NOTRACE` [1] or not enable
dynamic ftrace at all.

When --unsafe is used, bypass the ftrace check and pass the function name to
`bpf_program__attach_kprobe_opts()` verbatim. Note that this is not done for
wildcard probes; we still need to know which functions are traceable in order
to perform probe expansion.

[1] https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/tree/kernel/trace/trace_kprobe.c?h=v6.12.73#n441

Signed-off-by: Tomislav Novak <tnovak@meta.com>

--- a/man/adoc/bpftrace.adoc
+++ b/man/adoc/bpftrace.adoc
@@ -189,6 +189,10 @@ Keep messages quiet.
 Some calls, like 'system', are marked as unsafe as they can have dangerous side effects ('system("rm -rf")') and are disabled by default.
 This flag allows their use.
 
+In addition, it makes certain probe checks less restrictive. It can be used to probe functions that
+bpftrace reports as not traceable, but are supported by kprobes (e.g. if the kernel is configured to
+allow probing notrace functions).
+
 === *--usdt-file-activation*
 
 Activate usdt semaphores based on file path.
